@@ -1,3 +1,7 @@
+2010-08-10  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/SNMPServer.pm: Added support for SNMP filters.
+
 2010-08-10  Sancho Lerena <slerena@artica.es>
 
 	* lib/PandoraFMS/Config.pm: Updated build and development version.
